Fix perfect pixel alignment on photo page

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -34,8 +34,8 @@
     min-height: 160px;
 
     img {
-      width: 265px;
-      margin-top: -26px;
+      width: 225px;
+      margin-top: -16px;
     }
   }
 }
@@ -49,6 +49,10 @@
   text-transform: uppercase;
   text-align: center;
   margin: 44px 32px 0 32px;
+
+  &--alt {
+    margin: 39px 32px 0 32px;
+  }
 }
 
 .page-main__subtitle {
@@ -58,6 +62,10 @@
   text-transform: uppercase;
   text-align: center;
   margin: 28px 32px 5px 32px;
+
+  &--alt {
+    margin: 23px 19px 5px 19px;
+  }
 }
 
 .page-main__find-hotel {
@@ -69,7 +77,7 @@
 }
 
 .page-main__video {
-  min-height: 503px;
+  min-height: 500px;
 }
 
 .page-main__form {
